# voxcraft-viz

./: .gitignore  BuildOnWindows.md  CMakeLists.txt  InstallOnMac.md  README.md  VoxCAD.pri  VoxCAD.pro  voxcraft-viz.pri  voxcraft-viz.pro  voxcraft-viz.qrc
demos/: m190.history  m805.history
snap/: snapcraft.yaml
src/QTUtils/: QOpenGL.cpp  QOpenGL.h
src/VX1/: GL_Utils.cpp  GL_Utils.h  Mesh.h  VXS_SimGLView.cpp  VXS_SimGLView.h  VX_MeshUtil.cpp  VX_Object.cpp  VX_Object.h  VX_Sim.cpp  VX_Sim.h
src/VX2/: .gitignore  CMakeLists.txt  README.md  main.cpp
src/VX2/include/: VX_External.h  VX_Link.h  VX_Material.h  VX_MaterialLink.h  VX_MaterialVoxel.h  VX_Voxel.h  Vec3D.h  Voxelyze.h  types.h
src/VX2/src/: VX_Link.cpp  VX_MeshRender.cpp  VX_Voxel.cpp
src/main/: Dlg_3DBrush.cpp  Dlg_3DBrush.h  Dlg_EditPrim.cpp  Dlg_Physics.cpp  Dlg_Physics.h  Dlg_StructureEditor.h  Dlg_VideoCapture.cpp  Dlg_Workspace.h  QVX_Edit.cpp  QVX_Interface.cpp  QVX_Interfaces.h  QVX_TensileTest.cpp  QVX_TensileTest.h  VoxCad.cpp  VoxCad.h  VoxCad.ui  main.cpp  vPhysics.ui  vStructureEditor.ui
